k3s-manifest/glance/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    name: glance
