k3s-manifest/glance/glance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  selector:
    app: glance
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
