k3s-manifest/glance/glance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-security-headers@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.syslabs.dev
      secretName: home-syslabs-dev-tls
  rules:
    - host: home.syslabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
